# ansible_preamble

./: README.md  pyproject.toml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  verify.yml
tasks/: main.yml  ssh.yml  user.yml
tests/: test.yml
vars/: main.yml
