[tool.poetry]
name = "preamble"
version = "0.1.0"
description = "Role to bootstrap ansible host"
authors = ["Wiktor Ślęczka <wikii122@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
ansible = "^4.2.0"

[tool.poetry.dev-dependencies]
molecule = {extras = ["docker"], version = "^3.0.2"}
ansible-lint = "^4.2.0"
yamllint = "^1.20.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
